--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="works">
                 <p id="worksBtn" class="main-title">Works</p>
                 <div id="worksContent">
-                   <a href="" class="work">
+                   <a href="internship-work.html" class="work">
                     <p id="internship">Internship Work</p>
                    </a>
                    <a href="" class="work">
@@ -94,7 +94,8 @@
         <div class="footer">
             <p>©Chika Kurihara 2025</p>
         </div>
-        <script src="script.js"></script>
         <script src="translation.js"></script>
+        <script src="translation-handler.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
