added gallery and modal

--- a/internship-work.html
+++ b/internship-work.html
@@ -17,8 +17,9 @@
         </div>
 
         <div id="inContent">
+
             <div class="cancelBtnContainer">
-                <a href="index.html"><i class="fa-solid fa-xmark"></i></a>
+                 <a href="index.html"><i class="fa-solid fa-xmark"></i></a>
             </div>
             <h1 id="inTitle">Internship<br>Work</h1>
             <p id="inDescription">
@@ -27,8 +28,33 @@
             </p>
 
             <div class="inWorksContainer">
+                <div class="gallery">
+                    <img src="images/LP.png" alt="Landing page 1 (laptop)" data-description="Project 1: Shopify product page redesign">
+                    <img src="images/LP2.png" alt="Landing page 2 (Phone)" data-description="Project 2: Landing page optimization">
+                    <img src="images/LP3.png" alt="Landing page 3" data-description="Project 3: Custom checkout flow">
+                    <img src="images/LP4.png" alt="Landing page 4" data-description="Project 3: Custom checkout flow">
+                    <img src="images/itempage.png" alt="Product page" data-description="Project 3: Custom checkout flow">
+                    <img src="images/form.png" alt="Form" data-description="Project 3: Custom checkout flow">
+                    <img src="images/BYO.png" alt="Custom item page" data-description="Project 3: Custom checkout flow">
+                    <img src="images/BYO2.png" alt="Custom item page 2" data-description="Project 3: Custom checkout flow">
+                    <img src="images/receipe.png" alt="Receipe Page" data-description="Project 3: Custom checkout flow">
+                    <img src="images/receipe2.png" alt="Receipe Page 2" data-description="Project 3: Custom checkout flow">
+                    <img src="images/receipe3.png" alt="Receipe Page 3" data-description="Project 3: Custom checkout flow">
+                    <img src="images/search.png" alt="Search bar" data-description="Project 3: Custom checkout flow">
+                    <img src="images/search2.png" alt="Search bar 2" data-description="Project 3: Custom checkout flow">
+                    <img src="images/search3.png" alt="Search bar 3" data-description="Project 3: Custom checkout flow">
+                    <img src="images/search4.png" alt="Search bar 4" data-description="Project 3: Custom checkout flow">
+                </div>
 
+                <div id="myModal" class="modal">
+                    <div class="modal-content">
+                        <span class="close"><i class="fa-solid fa-xmark"></i></span>
+                        <img id="modalImage" src="" alt="">
+                        <p id="modalDesc"></p>
+                    </div>
+                </div>
             </div>
+
         </div>
 
         <div class="footer">
@@ -36,5 +62,6 @@
         </div>
         <script src="translation.js"></script>
         <script src="translation-handler.js"></script>
+        <script src="modal-handler.js"></script>
     </body>
 </html>
