Updated Internship Work page

--- a/internship-work.html
+++ b/internship-work.html
@@ -29,21 +29,20 @@
 
             <div class="inWorksContainer">
                 <div class="gallery">
-                    <img src="images/LP.png" alt="Landing page 1 (laptop)" data-description="Project 1: Shopify product page redesign">
-                    <img src="images/LP2.png" alt="Landing page 2 (Phone)" data-description="Project 2: Landing page optimization">
-                    <img src="images/LP3.png" alt="Landing page 3" data-description="Project 3: Custom checkout flow">
-                    <img src="images/LP4.png" alt="Landing page 4" data-description="Project 3: Custom checkout flow">
-                    <img src="images/itempage.png" alt="Product page" data-description="Project 3: Custom checkout flow">
-                    <img src="images/form.png" alt="Form" data-description="Project 3: Custom checkout flow">
-                    <img src="images/BYO.png" alt="Custom item page" data-description="Project 3: Custom checkout flow">
-                    <img src="images/BYO2.png" alt="Custom item page 2" data-description="Project 3: Custom checkout flow">
-                    <img src="images/receipe.png" alt="Receipe Page" data-description="Project 3: Custom checkout flow">
-                    <img src="images/receipe2.png" alt="Receipe Page 2" data-description="Project 3: Custom checkout flow">
-                    <img src="images/receipe3.png" alt="Receipe Page 3" data-description="Project 3: Custom checkout flow">
-                    <img src="images/search.png" alt="Search bar" data-description="Project 3: Custom checkout flow">
-                    <img src="images/search2.png" alt="Search bar 2" data-description="Project 3: Custom checkout flow">
-                    <img src="images/search3.png" alt="Search bar 3" data-description="Project 3: Custom checkout flow">
-                    <img src="images/search4.png" alt="Search bar 4" data-description="Project 3: Custom checkout flow">
+                    <img src="images/LP.png" alt="Landing page 1 (desktop)" data-key="lp1">
+                    <img src="images/LP2.png" alt="Landing page 2 (mobile)" data-key="lp2">
+                    <img src="images/LP4.png" alt="Landing page 3 (desktop)" data-key="lp3">
+                    <img src="images/LP3.png" alt="Landing page 4 (mobile)" data-key="lp4">
+                    <img src="images/form.png" alt="Form" data-key="form">
+                    <img src="images/BYO2.png" alt="Build Your Own Bundle (Desktop)" data-key="byo1">
+                    <img src="images/BYO.png" alt="Build Your Own Bundle (Mobile)" data-key="byo2">
+                    <img src="images/receipe.png" alt="Receipe Page 1" data-key="receipe1">
+                    <img src="images/receipe2.png" alt="Receipe Page 2" data-key="receipe2">
+                    <img src="images/receipe3.png" alt="Receipe Page 3" data-key="receipe3">
+                    <img src="images/search.png" alt="Search bar 1" data-key="search1">
+                    <img src="images/search2.png" alt="Search bar 2" data-key="search2">
+                    <img src="images/search3.png" alt="Search bar 3" data-key="search3">
+                    <img src="images/search4.png" alt="Search bar 4" data-key="search4">
                 </div>
 
                 <div id="myModal" class="modal">
