--- a/internship-work.html
+++ b/internship-work.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
+    <body class="lang-EN">
         <div class="navigation">
             <div id="languageBtn">
                 <i class="fa-solid fa-globe icon-large"></i>
