--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                    <a href="internship-work.html" class="work">
                     <p id="internship">Internship Work</p>
                    </a>
-                   <a href="" class="work">
+                   <a href="" class="work" style="display: none;">
                     <p  id="mock">Mock Website</p>
                    </a>
                    <a href="https://github.com/chika25" target="_blank" class="work">
