--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
                     <a class="resume-item" href="resume-en.pdf" target="_blank">
                         <p id="resumeEn">English</p>
                     </a>
-                    <a class="resume-item" href="resume-jp.pdf" target="_blank">
+                    <!-- <a class="resume-item" href="resume-jp.pdf" target="_blank">
                         <p id="resumeJp">Japanese</p>
-                    </a>
+                    </a> -->
                 </div>
             </div>
 
             <div id="contact">
                 <p id="contactBtn" class="main-title">Contact</p>
                 <div id="contactContent">
-                    <p id="contactText">Please contact me at <a href="mailto:c.kurihara25@gmail.com" class="email">c.kurihara25@gmail.com</a></p>
+                    <p id="contactText">Please contact me at: <a href="mailto:c.kurihara25@gmail.com" class="email">c.kurihara25@gmail.com</a></p>
                     <p id="contactTextOr">or</p>
                     <a href="https://www.linkedin.com/in/chikakurihara/" target="_blank"><i class="fa-brands fa-linkedin-in linked-in"></i></a>
                 </div>
