--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chika Kurihara – Portfolio</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
+        <meta name="description" content="Front-End Developer portfolio of Chika Kurihara. Specialized in building responsive websites using HTML, CSS, JavaScript, and React." />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body class="lang-EN">
-        <div class="navigation">
+        <nav>
             <div id="languageBtn">
                 <i class="fa-solid fa-globe icon-large"></i>
                 <p id="lg">EN</p>
             </div>
-        </div>
+        </nav>
 
         <div class="hero-section">
             <h1 id="name">
@@ -25,12 +25,12 @@
                 Front-End Developer with hands-on experience in full-stack web projects. 
                 Passionate about building clean, responsive, and user-friendly websites.
             </p>
-            <a href="#main" class="arrow">
+            <a href="#main" class="arrow" aria-label="go to main section">
                 <i class="fa-solid fa-angle-down icon-large"></i>
             </a>
         </div>
 
-        <div id="main">
+        <main>
             <div id="about">
                 <p id="aboutBtn" class="main-title">About</p>
                 <div id="aboutContent" >
@@ -86,14 +86,16 @@
                 <div id="contactContent">
                     <p id="contactText">Please contact me at: <a href="mailto:c.kurihara25@gmail.com" class="email">c.kurihara25@gmail.com</a></p>
                     <p id="contactTextOr">or</p>
-                    <a href="https://www.linkedin.com/in/chikakurihara/" target="_blank"><i class="fa-brands fa-linkedin-in linked-in"></i></a>
+                    <a href="https://www.linkedin.com/in/chikakurihara/" target="_blank" aria-label="LinkedIn Profile (opens in new tab)">
+                        <i class="fa-brands fa-linkedin-in linked-in"></i>
+                    </a>
                 </div>
             </div>
-        </div>
+        </main>
 
-        <div class="footer">
+        <footer>
             <p>©Chika Kurihara 2025</p>
-        </div>
+        <footer>
         <script src="translation.js"></script>
         <script src="translation-handler.js"></script>
         <script src="script.js"></script>
