--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
         </div>
 
-        <main>
+        <main id="main">
             <div id="about">
                 <p id="aboutBtn" class="main-title">About</p>
                 <div id="aboutContent" >
