--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Chika Kurihara – Portfolio</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
         <meta name="description" content="Front-End Developer portfolio of Chika Kurihara. Specialized in building responsive websites using HTML, CSS, JavaScript, and React." />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body class="lang-EN">
         <nav>
@@ -48,8 +48,8 @@
                    <a href="internship-work.html" class="work">
                     <p id="internship">Internship Work</p>
                    </a>
-                   <a href="" class="work" style="display: none;">
-                    <p  id="mock">Mock Website</p>
+                   <a href="personal-projects.html" class="work">
+                    <p  id="personal">Personal Projects</p>
                    </a>
                    <a href="https://github.com/chika25" target="_blank" class="work">
                     <p>GitHub</p>
