--- a/internship-work.html
+++ b/internship-work.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Chika Kurihara – Portfolio</title>
+        <title>Chika Kurihara – Portfolio:Internship Projects</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="css/works.css" />
     </head>
     <body class="lang-EN">
-        <div class="navigation">
+        <nav>
             <div id="languageBtn">
                 <i class="fa-solid fa-globe icon-large"></i>
                 <p id="lg">EN</p>
             </div>
-        </div>
+        </nav>
 
         <div id="inContent">
 
             <div class="cancelBtnContainer">
                  <a href="index.html"><i class="fa-solid fa-xmark"></i></a>
             </div>
-            <h1 id="inTitle">Internship<br>Work</h1>
+            <h1 id="inTitle" class="workTitle">Internship<br>Work</h1>
             <p id="inDescription">
                 Worked as a website developer during my internship. Created new pages (such as landing pages) and managed or modified existing pages using HTML, 
                 CSS, JavaScript, and Shopify Liquid on a Shopify-powered site.
@@ -56,9 +56,9 @@
 
         </div>
 
-        <div class="footer">
+        <footer>
             <p>©Chika Kurihara 2025</p>
-        </div>
+        </footer>
         <script src="translation.js"></script>
         <script src="translation-handler.js"></script>
         <script src="modal-handler.js"></script>
