created folders for appropriate url

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <div id="works">
                 <p id="worksBtn" class="main-title">Works</p>
                 <div id="worksContent">
-                   <a href="internship-work.html" class="work">
+                   <a href="/internship-work/" class="work">
                     <p id="internship">Internship Work</p>
                    </a>
-                   <a href="personal-projects.html" class="work">
+                   <a href="/personal-projects/" class="work">
                     <p  id="personal">Personal Projects</p>
                    </a>
                    <a href="https://github.com/chika25" target="_blank" class="work">
