--- a/personal-projects/index.html
+++ b/personal-projects/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chika Kurihara – Portfolio:Personal Projects</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
         <link rel="stylesheet" href="css/works.css" />
+        <link rel="preload" as="image" href="images/image.png">
     </head>
     <body class="lang-EN">
         <nav>
