modified home links

--- a/internship-work/index.html
+++ b/internship-work/index.html
@@ -19,7 +19,7 @@
         <div id="inContent">
 
             <div class="cancelBtnContainer">
-                 <a href="index.html"><i class="fa-solid fa-xmark"></i></a>
+                 <a href="/" aria-label="Go back to home page"><i class="fa-solid fa-xmark"></i></a>
             </div>
             <h1 id="inTitle" class="workTitle">Internship<br>Work</h1>
             <p id="inDescription">
@@ -29,20 +29,20 @@
 
             <div class="inWorksContainer">
                 <div class="gallery">
-                    <img src="images/LP.png" alt="Landing page 1 (desktop)" data-key="lp1">
-                    <img src="images/LP2.png" alt="Landing page 2 (mobile)" data-key="lp2">
-                    <img src="images/LP4.png" alt="Landing page 3 (desktop)" data-key="lp3">
-                    <img src="images/LP3.png" alt="Landing page 4 (mobile)" data-key="lp4">
-                    <img src="images/form.png" alt="Form" data-key="form">
-                    <img src="images/BYO2.png" alt="Build Your Own Bundle (Desktop)" data-key="byo1">
-                    <img src="images/BYO.png" alt="Build Your Own Bundle (Mobile)" data-key="byo2">
-                    <img src="images/receipe.png" alt="Receipe Page 1" data-key="receipe1">
-                    <img src="images/receipe2.png" alt="Receipe Page 2" data-key="receipe2">
-                    <img src="images/receipe3.png" alt="Receipe Page 3" data-key="receipe3">
-                    <img src="images/search.png" alt="Search bar 1" data-key="search1">
-                    <img src="images/search2.png" alt="Search bar 2" data-key="search2">
-                    <img src="images/search3.png" alt="Search bar 3" data-key="search3">
-                    <img src="images/search4.png" alt="Search bar 4" data-key="search4">
+                    <img src="/images/LP.png" alt="Landing page 1 (desktop)" data-key="lp1">
+                    <img src="/images/LP2.png" alt="Landing page 2 (mobile)" data-key="lp2">
+                    <img src="/images/LP4.png" alt="Landing page 3 (desktop)" data-key="lp3">
+                    <img src="/images/LP3.png" alt="Landing page 4 (mobile)" data-key="lp4">
+                    <img src="/images/form.png" alt="Form" data-key="form">
+                    <img src="/images/BYO2.png" alt="Build Your Own Bundle (Desktop)" data-key="byo1">
+                    <img src="/images/BYO.png" alt="Build Your Own Bundle (Mobile)" data-key="byo2">
+                    <img src="/images/receipe.png" alt="Receipe Page 1" data-key="receipe1">
+                    <img src="/images/receipe2.png" alt="Receipe Page 2" data-key="receipe2">
+                    <img src="/images/receipe3.png" alt="Receipe Page 3" data-key="receipe3">
+                    <img src="/images/search.png" alt="Search bar 1" data-key="search1">
+                    <img src="/images/search2.png" alt="Search bar 2" data-key="search2">
+                    <img src="/images/search3.png" alt="Search bar 3" data-key="search3">
+                    <img src="/images/search4.png" alt="Search bar 4" data-key="search4">
                 </div>
 
                 <div id="myModal" class="modal">
@@ -59,8 +59,8 @@
         <footer>
             <p>©Chika Kurihara 2025</p>
         </footer>
-        <script src="translation.js"></script>
-        <script src="translation-handler.js"></script>
-        <script src="modal-handler.js"></script>
+        <script src="/translation.js"></script>
+        <script src="/translation-handler.js"></script>
+        <script src="/modal-handler.js"></script>
     </body>
 </html>
