--- a/personal-projects/index.html
+++ b/personal-projects/index.html
@@ -6,7 +6,7 @@
         <title>Chika Kurihara – Portfolio:Personal Projects</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
         <link rel="stylesheet" href="/css/works.css" />
-        <link rel="preload" as="image" href="images/image.png">
+        <link rel="preload" as="image" href="/images/image.png">
     </head>
     <body class="lang-EN">
         <nav>
@@ -19,14 +19,14 @@
         <div id="inContent">
 
             <div class="cancelBtnContainer">
-                 <a href="index.html"><i class="fa-solid fa-xmark"></i></a>
+                 <a href="/" aria-label="Go back to home page"><i class="fa-solid fa-xmark"></i></a>
             </div>
             <h1 id="pwTitle" class="workTitle">Personal<br>Project</h1>
 
             <div class="pwWorksContainer">
                 <div class="pwWork">
                     <h2 id="sozaiTitle">SozAI - AI Image Library</h2>
-                    <img src="images/image.png" alt="SozAI main screen image">
+                    <img src="/images/image.png" alt="SozAI main screen image">
                     <div class="pwDescContainer">
                         
                         <p>
@@ -61,7 +61,7 @@
                         </ul>
                         
                         <a href="https://sozaiai.com" target="_blank" aria-label="Open SozAI live site in a new tab">
-                            <img src="images/SozAI.webp" alt="SozAI logo">
+                            <img src="/images/SozAI.webp" alt="SozAI logo">
                             <span class="sr-only" id="visitSite">Visit Live Site</span> 
                         </a>
                     </div>
@@ -73,8 +73,8 @@
         <footer>
             <p>©Chika Kurihara 2025</p>
         </footer>
-        <script src="translation.js"></script>
-        <script src="translation-handler.js"></script>
-        <script src="modal-handler.js"></script>
+        <script src="/translation.js"></script>
+        <script src="/translation-handler.js"></script>
+        <script src="/modal-handler.js"></script>
     </body>
 </html>
